--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-once="true">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://source.unsplash.com/featured/?hacking" alt="Placeholder image">
+                <img src="https://images.unsplash.com/photo-1529101091764-c3526daf38fe?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218fHx8fHx8fHwxNjIxNDU2NDk0&ixlib=rb-1.2.1&q=80&w=1080&utm_source=unsplash_source&utm_medium=referral&utm_campaign=api-credit" alt="Placeholder image">
               </figure>
             </div>
           </div>
@@ -419,7 +419,7 @@
     <div class="section-heading">
       <h3 class="title is-2">Resume</h3>
       <h4 class="subtitle is-5">More about my past</h4>
-      <a href="#" class="button is-success is-rounded is-outlined is-medium">
+      <a href="https://docs.google.com/document/d/1GYYhWso5NfNeuIcnZBU72UMfGwJ4upaarQWOINMQXu0/export?format=pdf" class="button is-success is-rounded is-outlined is-medium">
         <span class="icon">
           <i class="fas fa-file-alt"></i>
         </span>
