--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
   <hr>
 
   <!-- Resume -->
-  <section class="section box" id="resume">
+  <section class="section box" id="resume"  data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
     <div class="section-heading">
       <h3 class="title is-2">Resume</h3>
       <h4 class="subtitle is-5">More about my past</h4>
@@ -440,7 +440,7 @@
   </section>
 
   <!-- Languages -->
-  <section class="section box" id="resume">
+  <section class="section box" id="resume"  data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
     <div class="section-heading">
       <h3 class="title is-2">Languages</h3>
       <h4 class="subtitle is-5">Current and learning</h4>
@@ -483,7 +483,7 @@
 
   
   <!-- Contact -->
-  <section class="section" id="contact">
+  <section class="section" id="contact"  data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
     <div class="container">
       <div class="section-heading">
         <h3 class="title is-2">Contact</h3>
