--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
           </span>
           <span>Resume</span>
         </a>
+        <a class="navbar-item" href="#languages-section">
+          <span class="icon">
+            <i class="fas fa-language"></i>
+          </span>
+          <span> Languages</span>
+        </a>
         <a class="navbar-item" href="#contact">
           <span class="icon">
             <i class="fas fa-envelope"></i>
@@ -440,8 +446,9 @@
   </section>
 
   <!-- Languages -->
-  <section class="section box" id="resume"  data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+  <section class="section box" id="languages-section"  data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
     <div class="section-heading">
+      <br>
       <h3 class="title is-2">Languages</h3>
       <h4 class="subtitle is-5">Current and learning</h4>
       <button class="button is-success is-rounded is-outlined" onclick="showLanguages()" id="languages-button">
