--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </p>
                 <p>
                   ADVANCED ENGLISH at <a target="_blank" href="http://www.atclanguageschools.com/">ATC Language
-                    School</a>
+                    School - Bray, County Wicklow, Ireland</a>
                 </p>
                 <p>
                   HIGH SCHOOL at <a target="_blank" href="https://southwest.gbaps.org/">Green Bay Southwest Highscool -
