--- a/index.html
+++ b/index.html
@@ -165,24 +165,53 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-content has-text-centered">
-              <h3 class="title is-4">Education</h3>
+            <div class="card-content has-text-left">
+              <h3 class="title is-4 has-text-centered">Education</h3>
               <div class="content">
                 <p>
-                  SOFTWARE ENGINEER at <a target="_blank" href="https://www.unicesumar.edu.br/presencial/">Unicesumar -
-                    Maringá, PR, Brazil</a>
+                  <a class="invalid_link">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                  </a> 
+                  BACHELOR OF SOFTWARE ENGINEER at 
+                  <a target="_blank" href="https://www.unicesumar.edu.br/presencial/">
+                    Unicesumar - Maringá, PR, Brazil
+                  </a>
                 </p>
                 <p>
-                  ENGLISH LEVEL B2 at <a target="_blank" href="https://www.llinstitute.com/">London Language Institute -
-                    ON, Canada</a>
+                  <a href="https://drive.google.com/uc?export=download&id=1pPqYtzANvU_zS_U6SomCz92M-t-9TUml">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                  </a> 
+                    ENGLISH AS A SECOND LANGUAGE at 
+                  <a target="_blank" href="https://www.llinstitute.com/">
+                    London Language Institute -
+                    ON, Canada
+                  </a>
                 </p>
                 <p>
-                  ADVANCED ENGLISH at <a target="_blank" href="http://www.atclanguageschools.com/">ATC Language
-                    School - Bray, County Wicklow, Ireland</a>
+                  <a href="https://drive.google.com/uc?export=download&id=1Vr8H_LlSPldjgDL2d6wrFtwrgTMHtTSi">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                  </a>
+                    ENGLISH LANGUAGE STUDIES at 
+                  <a target="_blank" href="http://www.atclanguageschools.com/">ATC Language
+                    School - Bray, County Wicklow, Ireland
+                  </a>
                 </p>
                 <p>
-                  HIGH SCHOOL at <a target="_blank" href="https://southwest.gbaps.org/">Green Bay Southwest Highscool -
-                    Grennbay, WI, USA</a>
+                  <a class="invalid_link">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                  </a> 
+                  HIGH SCHOOL at
+                  <a target="_blank" href="https://southwest.gbaps.org/">
+                    Green Bay Southwest Highscool - Green Bay, WI, USA
+                  </a>
                 </p>
               </div>
             </div>
