--- a/index.html
+++ b/index.html
@@ -435,12 +435,12 @@
     <div class="section-heading">
       <h3 class="title is-2">Resume</h3>
       <h4 class="subtitle is-5">More about my past</h4>
-      <a href="https://docs.google.com/document/d/1GYYhWso5NfNeuIcnZBU72UMfGwJ4upaarQWOINMQXu0/export?format=pdf"
+      <a href="https://docs.google.com/document/d/11wn0tG9YvByRQzqeOnOvo-fCSRIEiqBQ1Pcq9INmrbQ/export?format=pdf"
         class="button is-success is-rounded is-outlined is-medium">
         <span class="icon">
           <i class="fas fa-file-alt"></i>
         </span>
-        <span>Download My Resume</span>
+        <span title="PT-BR">Download My Resume</span>
       </a>
     </div>
   </section>
