alteraçao nas fotos

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
             <div class="card-image">
               <figure class="image is-5by4">
                 <img class="mySlides" src="assets/img/pic001.jpeg" alt="Code">
-                <img class="mySlides" src="assets/img/me000.jpeg" alt="My photo">
+                <!-- <img class="mySlides" src="assets/img/me000.jpeg" alt="My photo"> -->
                 <img class="mySlides" src="assets/img/me001.jpeg" alt="My photo">
                 <img class="mySlides" src="assets/img/me002.jpeg" alt="My photo">
-                <img class="mySlides" src="assets/img/me003.jpeg" alt="My photo">
+                <!-- <img class="mySlides" src="assets/img/me003.jpeg" alt="My photo"> -->
               </figure>
               
               </div>
