--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
     <div class="container">
       <div class="columns">
-        <div class="column" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+<!--         <div class="column" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
           <div class="box">
             <div class="content">
               <h4 class="title is-5">Front End Web Development</h4>
@@ -429,7 +429,7 @@
               Vue.js.
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="column" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
           <div class="box">
             <div class="content">
