--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                   </a>
                 </p>
                 <p>
-                  <a href="https://drive.google.com/uc?export=download&id=1pPqYtzANvU_zS_U6SomCz92M-t-9TUml">
+                  <a href="https://docs.google.com/document/d/1GYYhWso5NfNeuIcnZBU72UMfGwJ4upaarQWOINMQXu0">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
