--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           Luiz Lima
         </h1>
         <h2 class="subtitle is-3">
-          Software Engineer and Full-Stack Developer
+          Software Engineer
         </h2>
       </div>
     </div>
@@ -91,7 +91,7 @@
       <h3 class="title is-2">About Me</h3>
 
       <div class="container">
-        <p>Full stack developer with more than <strong>4 years</strong> of well-rounded experience with a degree in the
+        <p>Software Engineer with more than <strong>4 years</strong> of well-rounded experience with a degree in the
           field of
           <strong>Software Engineering</strong>, extensive knowledge of linux, modern web development techniques and
           love for <strong>Linux, Algorithms and Logic</strong>.<br>
