--- a/index.html
+++ b/index.html
@@ -91,14 +91,8 @@
       <h3 class="title is-2">About Me</h3>
 
       <div class="container">
-        <p>Software Engineer with more than <strong>4 years</strong> of well-rounded experience with a degree in the
-          field of
-          <strong>Software Engineering</strong>, extensive knowledge of linux, modern web development techniques and
-          love for <strong>Linux, Algorithms and Logic</strong>.<br>
-          Dedicated to working hard, upgrading and updating my skills & knowledge.<br>
-          Armwrestling and weightlifting athlete, passionate about hard training and bodybuilding, always looking for
-          maximum development in all areas be they physical, mental and spiritual.<br>
-          Lover of classic horror/fiction/thriller movies and 80's culture.
+        <p>I'm a <strong>Software Engineer</strong> with more than <strong>5 years</strong> of well-rounded experience with a degree in the field of Software Engineering, I have extensive knowledge of linux and modern web development techniques foccusing on security. I'm passionate about Linux, Algorithms and Logic. Dedicated to working hard, improve my skills & knowledge constantly. In free time I traing for Arm Wrestling and weightlifting, always looking for maximum development in all areas be they physical, mental and spiritual. Lover of classic sci-fi/horror movies and 80's music and culture.
+        </p>
       </div>
     </div>
     <hr>
