--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Luiz VBLL</title>
+  <title>Luiz Lima</title>
+  <meta name="description" content="I'm a Software Developer with more than 5 years of well-rounded experience with a degree in the field of Software Engineering, I have extensive knowledge of linux and modern web development techniques foccusing on security. I'm passionate about Linux, Algorithms and Logic." />
+  <meta property="og:title" content="Luiz Lima Software Engineer" />
+  <meta property="og:url" content="https://www.lcorp.dev/" />
+  <meta property="og:description" content="Luiz Lima Software Engineer" />
+  <meta property="og:image" content="//cdn.example.com/uploads/images/webpage_300x200.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="pr_BR" />
+  <meta property="og:locale:alternate" content="fr_FR" />
+  <meta property="og:locale:alternate" content="es_ES" />
   <!-- Base CSS -->
   <link href="css/base.css" rel="stylesheet">
   <!-- Font Awesome Icons 5.4.1 -->
@@ -135,7 +144,7 @@
                   </tr>
                   <tr>
                     <td>Email:</td>
-                    <td>luiz@vbll.dev</td>
+                    <td>luiz@lcorp.dev</td>
                   </tr>
                   <tr>
                     <td>City:</td>
