--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Luiz Lima Software Engineer" />
   <meta property="og:url" content="https://www.lcorp.dev/" />
   <meta property="og:description" content="Luiz Lima Software Engineer" />
-  <meta property="og:image" content="//cdn.example.com/uploads/images/webpage_300x200.png" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/luizfelipevbll/luizfelipevbll/master/favicon.ico" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="pr_BR" />
   <meta property="og:locale:alternate" content="fr_FR" />
@@ -100,7 +100,7 @@
       <h3 class="title is-2">About Me</h3>
 
       <div class="container">
-        <p>I'm a <strong>Software Engineer</strong> with more than <strong>5 years</strong> of well-rounded experience with a degree in the field of Software Engineering, I have extensive knowledge of linux and modern web development techniques foccusing on security. I'm passionate about Linux, Algorithms and Logic. Dedicated to working hard, improve my skills & knowledge constantly. In free time I traing for Arm Wrestling and weightlifting, always looking for maximum development in all areas be they physical, mental and spiritual. Lover of classic sci-fi/horror movies and 80's music and culture.
+        <p>I'm a <strong>Software Developer</strong> with more than <strong>5 years</strong> of well-rounded experience with a degree in the field of Software Engineering, I have extensive knowledge of linux and modern web development techniques foccusing on security. I'm passionate about Linux, Algorithms and Logic. Dedicated to working hard, improve my skills & knowledge constantly. In free time I traing for Arm Wrestling and weightlifting, always looking for maximum development in all areas be they physical, mental and spiritual. Lover of classic sci-fi/horror movies and 80's music and culture.
         </p>
       </div>
     </div>
@@ -116,10 +116,7 @@
             <div class="card-image">
               <figure class="image is-5by4">
                 <img class="mySlides" src="assets/img/pic001.jpeg" alt="Code">
-                <!-- <img class="mySlides" src="assets/img/me000.jpeg" alt="My photo"> -->
                 <img class="mySlides" src="assets/img/me001.jpeg" alt="My photo">
-                <img class="mySlides" src="assets/img/me002.jpeg" alt="My photo">
-                <!-- <img class="mySlides" src="assets/img/me003.jpeg" alt="My photo"> -->
               </figure>
               
               </div>
