feat: whatsapp img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Luiz Lima Software Engineer" />
   <meta property="og:url" content="https://www.lcorp.dev/" />
   <meta property="og:description" content="Luiz Lima Software Engineer" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/luizfelipevbll/luizfelipevbll/master/favicon.ico" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/luizfelipevbll/luizfelipevbll/master/assets/img/logo.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="pr_BR" />
   <meta property="og:locale:alternate" content="fr_FR" />
