fix: whatsapp description

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="I'm a Software Developer with more than 5 years of well-rounded experience with a degree in the field of Software Engineering, I have extensive knowledge of linux and modern web development techniques foccusing on security. I'm passionate about Linux, Algorithms and Logic." />
   <meta property="og:title" content="Luiz Lima Software Engineer" />
   <meta property="og:url" content="https://www.lcorp.dev/" />
-  <meta property="og:description" content="Luiz Lima Software Engineer" />
+  <meta property="og:description" content="I'm a Software Developer with more than 5 years of well-rounded experience with a degree in the field of Software Engineering, I have extensive knowledge of linux and modern web development techniques foccusing on security. I'm passionate about Linux, Algorithms and Logic." />
   <meta property="og:image" content="https://raw.githubusercontent.com/luizfelipevbll/luizfelipevbll/master/assets/img/logo.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="pr_BR" />
